--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -105,6 +105,10 @@
             color: #FFFFFF;
             background-color: #C25100;
         }
+
+        .comment {
+            margin: 20px 0px 20px 20px;
+        }
     </style>
 </body>
 </html>
